@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 use Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog;
 use Unicode::UTF8 qw(decode_utf8);
@@ -18,5 +18,33 @@ is_deeply(
 	[
 		'Label: dog (en)',
 	],
-	'Print labels test.',
+	'Print labels test (en).',
+);
+
+# Test.
+$obj = Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog->new;
+@ret = print_labels($obj, { 'lang' => '', 'texts' => texts() },
+	\&Wikibase::Datatype::Print::Value::Monolingual::print);
+is_deeply(
+	\@ret,
+	[
+		'Label:',
+		'  pes (cs)',
+		'  dog (en)',
+	],
+	'Print labels test (all languages, lang is blank string).',
+);
+
+# Test.
+$obj = Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog->new;
+@ret = print_labels($obj, { 'texts' => texts() },
+	\&Wikibase::Datatype::Print::Value::Monolingual::print);
+is_deeply(
+	\@ret,
+	[
+		'Label:',
+		'  pes (cs)',
+		'  dog (en)',
+	],
+	'Print labels test (all languages, lang is undefined).',
 );
