@@ -1,6 +1,7 @@
 0.18
  - Add support for print of all aliases.
  - Add support for print of all descriptions.
+ - Add support for print of all labels.
  - Filter sitelinks via language.
 
 0.17 2024-06-21T14:06:58+02:00
